[package]
authors = [
  "Wyatt Jacob Herkamp <wherkamp@kingtux.me>",
  "Bruno Corrêa Zimmermann <brunoczim@gmail.com>",
]
categories = [
  "concurrency",
  "data-structures",
  "algorithms",
]
description = "This crate provides concurrent data structures and a solution to the ABA problem as an alternative of hazard pointers"
edition = "2021"
keywords = [
  "concurrency",
  "lock-free",
  "atomics",
  "data-structures",
]
license = "MIT"
name = "lock_freedom"
readme = "README.md"
repository = "https://github.com/wyatt-herkamp/lock_freedom"
rust-version = "1.83"
version = "0.1.0"
[dependencies]

[[bench]]
harness = false
name    = "map"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std"]
std     = []
